code: optimized GameProfileMixin